<resources>
    <!-- App Wide String Names -->
    <string name="app_name">Attendance System</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">Register New User Account</string>

    <!-- Button String Names -->
    <string name="check_in_new_user">Check In Another User</string>
    <string name="call_admin">Call Admin</string>
    <string name="try_again">Try Again</string>
    <string name="capture_photo_label">Capture Photo</string>
    <string name="unsuccessful_verification">Fail verification (debug)</string>

    <!-- Descriptive Text -->
    <string name="successful_login_label">Successful Login</string>
    <string name="unsuccessful_login_label">Unsuccessful Login</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="request_permission">This application needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support the Camera2 API.</string>

    <!-- Spinner -->
    <string name="id_selector_label">Choose an ID type</string>
    <string-array name="id_types_options">
        <item>Passport</item>
        <item>Driver\'s License</item>
        <item>Aadhaar Card (National ID)</item>
        <item>Ration Card</item>
        <item>PAN Card</item>
    </string-array>
    <string name="organization_type_selector_label">Select the type of Organization</string>
    <string-array name="organization_types">
        <item>NGO</item>
        <item>Sole Proprietorship</item>
        <item>Limited Liability Partnership</item>
        <item>Corporation</item>
        <item>Other</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>
    <string name="manual_check_in">Manual Check In</string>
    <string name="id_proof_given">ID Proof Given</string>
    <string name="last_name_label">Last Name</string>
    <string name="first_name_label">First Name</string>
    <string name="comments_label">Comments (optional)</string>
    <string name="check_in_label">Check In</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="check_mark_description">Check Mark</string>
    <string name="cross_mark_description">Cross Mark</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="identification_number_label">ID Number</string>
    <string name="register_label">Register</string>
    <string name="admin_privilege_label">Admin Privileges</string>
    <string name="registration_successful_label">Registration Successful</string>
    <string name="organization_options_label">Create and Edit Organizations</string>
    <string name="shift_options_label">Create and Edit Shifts</string>
    <string name="check_in_options_label">View and Export Check Ins</string>
    <string name="admin_options_label">Administrative Options</string>
    <string name="create_organization_label">Create New Organization</string>
    <string name="edit_organization_label">Edit Existing Organization</string>
    <string name="create_shift_label">Create New Shift</string>
    <string name="edit_shift_label">Edit Existing Shift</string>
    <string name="organization_name_label">Name of the Organization</string>
    <string name="create_label">Create</string>

    <!-- Face Detector -->
    <string name="title_activity_photo_viewer">Photo Viewer</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
